# rust-shell

./: .gitignore  Cargo.toml  README.md  shell
src/: commands.rs  main.rs
